--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<img src="images/pic1.png" class="img-responsive" alt=""/>
 					<h1>Divya Jain</h1>
 					<br>
-					<p><b>Love to create useful Android Applications!</b></p>
+					<p><b>Love to create useful & user-friendly Mobile Applications! Android Aficionado</b></p>
 					<ul>
 						<li><a href="https://www.linkedin.com/in/divyajain2405" target="_blank">Hire Me</a></li>
 						<li><a href="#contact">Contact Me</a></li>
@@ -135,10 +135,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<!-- about-grids -->
 				<div>
 					<div class="about-grids">	
-						<p><b>Hi, I am a coding enthusiast, originally from Delhi, India. I worked as a Senior Mobile Developer for Samsung Research India for more than 2 years, where I developed native mobile applications for Samsung Os - Tizen. Thats when I realized I want to create user friendly applications to solve problems and make living easier.  
+						<p><b>Hi, I am a coding enthusiast, originally from Delhi, India. I enjoy building great software  - specially effective mobile applications - and also helping others do the same. My aim is to continously foster the growth mindself in not only myself, and solve problems to make living easier and bring about a positive change.  
 						</b></p>
-						<p><b>Currently I design and develop Android apps and learning Android every single day. I am <a href="https://developers.google.com/training/certification/associate-android-developer/" target="_blank">Google Certified Associate Android Developer</a>, have small apps currently available in Google play store and actively working with America for Animals for their app <a href="https://play.google.com/store/apps/details?id=org.hep.afa&hl=en" target="_blank">Humane Eating Project"</a> as one of the two developers.
-						I also write an <a href="https://androidwithdivya.wordpress.com/" target="_blank">Android blog</a> demonstrating solutions to android challenges that anyone might face when learning or working on Android.
+						<p><b>Currently I design and develop mobile apps in Android, React Native & IOS and learning every single day. I am <a href="https://developers.google.com/training/certification/associate-android-developer/" target="_blank">Google Certified Associate Android Developer</a>, successfully launched and continously enhancing <a href="https://play.google.com/store/apps/details?id=com.gametime.gametime&hl=en" target="_blank">Gametime App</a> and also actively working to improve America for Animals's app <a href="https://play.google.com/store/apps/details?id=org.hep.afa&hl=en" target="_blank">Humane Eating Project"</a> as one of the two developers.
+						I also speak at international Android conferences <a href="https://speakerdeck.com/djain2405" target="_blank">(SpeakerDeck)</a> ,write an <a href="https://androidwithdivya.wordpress.com/" target="_blank">Android blog</a> demonstrating solutions to android challenges that anyone might face when learning or working on Android and planning to start a similar one for React Native as well.
 						</b></p>
 						<p><b>When I am not coding, I am generally in the world of thrill and romance through reading various novels or singing on top of my lungs (Checkout my <a href="https://www.youtube.com/channel/UCX2CzP_4TfK4bXKvqXfHrEg?view_as=subscriber" target="_blank">youtube channel</a> :)). I love meeting new people and talking. Recently, I have found an affinity for cooking, specially Indian food :) My aim is to write applications and software which any user can efficiently interact with and ensure a great user experience! I am always up for developing new apps, so if you have any idea which needs a shape, pitch in and do not hesitate to contact me.
 						</b></p>
@@ -186,37 +186,25 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="blog-articals">
 					<div class="blog-artical">
 						<div class="blog-artical-pic">
-							<img src="images/port-2.jpg" title="booklist" />
+							<img src="images/gametime.png" title="Gametime" />
 						</div>
 							<div class="blog-artical-info">
-							<h3>Let's Read Them All!</h3>
-							<span>Android App to create book playlist and encourage reading more books!</a></span>
-							<p>Heard of a book recommendation from someone or saw a book you think you like at a bookstore, make a note of it in the app & create a book play list by searching for book names and adding them to your list of books you are dying to read. Once read, swipe them of your list and feel good!</p>
-							<a class="more-btn" href="https://play.google.com/store/apps/details?id=com.divya.readthemall" target="_blank">See More</a>
+							<h3>Gametime</h3>
+							<span>Tickets to Sports, Concerts, Theater </a></span>
+							<p>Gametime is the app that helps *you* score last minute ticket deals to all your favorite events! THE ticket app for all major sporting events including top baseball, football, hockey, and basketball from all the top leagues (MLB, NFL, NBA, NHL, MLS, & NCAA)</p>
+							<a class="more-btn" href="https://play.google.com/store/apps/details?id=com.gametime.gametime&hl=en" target="_blank">See More</a>
 							<div class="clearfix"> </div>
 						</div>
 					</div>
 					<div class="blog-artical">
 						<div class="blog-artical-pic">
-							<img src="images/port-3.jpg" title="Ring-Message" />
+							<img src="images/droidcon.jpg" title="Ring-Message" />
 						</div>
 						<div class="blog-artical-info">
-							<h3>Ring-Message</h3>
-							<span>Android app to assure you don't miss out on anything to ask or tell!</span>
-							<p>Sometimes it happens that one forgets some stuff when talking to someone! Ring-Message lets you save messages for anyone and next time when you call the person or the person calls you, a popup appears on the screen reminding you with the message. Developed with Android Studio, Sqlite Database, Call service</p>
-							<a class="more-btn" href="https://play.google.com/store/apps/details?id=myapp.prashant.ring_message&hl=en" target="_blank">See More</a>
-							<div class="clearfix"> </div>
-						</div>
-					</div>
-					<div class="blog-artical">
-						<div class="blog-artical-pic">
-							<img src="images/port-7.jpg" title="MyTicTacToe" />
-						</div>
-						<div class="blog-artical-info">
-							<h3><a href="#">Tic Tac Toe Game</a></h3>
-							<span>Android App to play the simple game of Tic Tac Toe!</span>
-							<p>Play a fun game of Tic Tac Toe by getting 3 X or O in a row, column or diagonal!</p>
-							<a class="more-btn" href="https://play.google.com/store/apps/details?id=com.my.divya.tictactoeapp" target="_blank">See More</a>
+							<h3>Droidcon-Boston</h3>
+							<span>Conference Scheduling & Content App</span>
+							<p>Droidcon Boston is a conference where the Android community meets, shares ideas and collaborates. One stop shop for the conference agenda, speakers and more info about sessions, schedule, Social interaction with other conference participants, social media integration. Also ability to save your favorite sessions and provide feedback.</p>
+							<!-- <a class="more-btn" href="https://play.google.com/store/apps/details?id=myapp.prashant.ring_message&hl=en" target="_blank">See More</a> -->
 							<div class="clearfix"> </div>
 						</div>
 					</div>
@@ -229,6 +217,18 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<span>Android App to raise awareness about Humane way of eating, and providing for Animal cause.</span>
 							<p>Find Vegan, Vegetarian Friendly and Humane Restaurants near you and enhance your awareness about Humane ways of eating.</p>
 							<a class="more-btn" href="https://play.google.com/store/apps/details?id=org.hep.afa&hl=en" target="_blank">See More</a>
+							<div class="clearfix"> </div>
+						</div>
+					</div>
+					<div class="blog-artical">
+						<div class="blog-artical-pic">
+							<img src="images/port-3.jpg" title="Ring-Message" />
+						</div>
+						<div class="blog-artical-info">
+							<h3>Ring-Message</h3>
+							<span>Android app to assure you don't miss out on anything to ask or tell!</span>
+							<p>Sometimes it happens that one forgets some stuff when talking to someone! Ring-Message lets you save messages for anyone and next time when you call the person or the person calls you, a popup appears on the screen reminding you with the message. Developed with Android Studio, Sqlite Database, Call service</p>
+							<!-- <a class="more-btn" href="https://play.google.com/store/apps/details?id=myapp.prashant.ring_message&hl=en" target="_blank">See More</a> -->
 							<div class="clearfix"> </div>
 						</div>
 					</div>
@@ -246,13 +246,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</div>
 					<div class="blog-artical">
 						<div class="blog-artical-pic">
-							<a href="single.html"><img src="images/port-2.jpeg" title="Mozilla" /></a>
+							<img src="images/port-7.jpg" title="MyTicTacToe" />
 						</div>
 						<div class="blog-artical-info">
-							<h3>Mozilla Servo Open Source Project</h3>
-							<span>Refactor GLES2 implementation for Non android platforms</a></span>
-							<p>Servo is Mozilla's web browser layout engine. It is being ported on Android by Samsung. I contributed to this open source project by refactoring one of the backend implementations to support it for Linux (non android) platforms. This implementation renders graphics on the browser & mainly uses RUST language.</p>
-							<a class="more-btn" href="http://wiki.expertiza.ncsu.edu/index.php/CSC/ECE_517_Fall_2015/M1506-Refactor-GLES2-Implementation#Project_Description" target="_blank">See More</a>
+							<h3><a href="#">Tic Tac Toe Game</a></h3>
+							<span>Android App to play the simple game of Tic Tac Toe!</span>
+							<p>Play a fun game of Tic Tac Toe by getting 3 X or O in a row, column or diagonal!</p>
+							<!-- <a class="more-btn" href="https://play.google.com/store/apps/details?id=com.my.divya.tictactoeapp" target="_blank">See More</a> -->
 							<div class="clearfix"> </div>
 						</div>
 					</div>
@@ -272,8 +272,20 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<!-- head-section -->
 				<!-- services-grids -->
 				<section class='category experience'>
-		<div class="content"
-        <div class='category-title'>EXPERIENCE</div>
+		<div class="content"></div>
+		<div class='category-title'>EXPERIENCE</div>
+		<div class='item'>
+			<h2 class='item-company-title'>Gametime-Tickets to Sports, Concerts, Theater</h2>
+			<span class='item-personal-title'>Lead Mobile Developer</span>
+			<div class='item-date'>November 2018 - Present</div>
+			<p class='item-company-details'>
+			  Rebranded and developed Gametime  <a href="https://play.google.com/store/apps/details?id=com.gametime.gametime&hl=en" target="_blank"> Android </a>   &   <a href="https://apps.apple.com/us/app/gametime-last-minute-tickets/id630687854" target="_blank">IOS</a>  apps , 1 Million plus active installs , Solo Android developer in a team of 3 
+			</p>
+			<ul class='item-personal-details'>
+			  <li>Continous integration & release of new App Features</li>
+			  <li>Individual contributor & Team player in a cross team, collaborative startup environment</li>
+			</ul>
+		  </div>
 		<div class='item'>
           <h2 class='item-company-title'>America for Animals</h2>
           <span class='item-personal-title'>Android Developer - Volunteer</span>
@@ -288,13 +300,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         </div>
         <div class='item'>
           <h2 class='item-company-title'>Bank Of America</h2>
-          <span class='item-personal-title'>Application Developer</span>
-          <div class='item-date'>Feb 2016 - Present</div>
+          <span class='item-personal-title'>Senior Android Developer</span>
+          <div class='item-date'>Feb 2016 - November 2018</div>
           <p class='item-company-details'>
-            Developing Business Process Management Applications in Java on Pega Cloud for Default workflow related processes.
+            Contributed to integration of Erica - the Virtual Financial Assistant into the Android Mobile App.
           </p>
           <ul class='item-personal-details'>
-            <li>Java</li>
+            <li>Java, Kotlin, Android Architecture Components, Data Binding</li>
             <li>Hands on experience with Agile Software Methodology</li>
           </ul>
         </div>
@@ -315,44 +327,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <li>Developed mobile web-based applications using latest web-in technologies, integrating Tizen with HTML5, JavaScript using JSP technology.</li>
           </ul>
         </div>
-        <div class='item'>
-          <h2 class='item-company-title'>Accenture Pvt Ltd.</h2>
-          <span class='item-personal-title'>Software Engineer</span>
-          <div class='item-date'>Aug 2011 - April 2012</div>
-          <p class='item-company-details'>
-            Developer for Canadian Client - Telus Mobility
-          </p>
-          <ul class='item-personal-details'>
-            <li>Developed automated test scripts for broad customer communication database with plan details</li>
-            <li>Worked with team members to solve technical problems</li>
-            <li>Tested and deployed code to our production environment</li>
-			<li>Worked on VbScript along with tools like LoadRunner & QuickTest Professional</li>
-          </ul>
-        </div>
         <div class='page-break'></div>
-        <div class='item'>
-          <h2 class='item-company-title'>Lantiq Communications</h2>
-          <span class='item-personal-title'>Software Engineer Intern</span>
-          <div class='item-date'>Jan - Jun 2011</div>
-          <p class='item-company-details'>
-            Create solution to enhance features of company specific MSVC application to support chipse
-          </p>
-          <ul class='item-personal-details'>
-            <li>Build new user-friendly features for the next release and saw them through QA</li>
-            <li>Worked on Microsoft Visual C++, Winset Technologies, Windows Operating System & networking concepts</li>
-          </ul>
-        </div>
-        <div class='item'>
-          <h2 class='item-company-title'>BHEL India</h2>
-          <span class='item-personal-title'>Web Developer Intern</span>
-          <div class='item-date'>May - July 2009</div>
-          <p class='item-company-details'>
-            Developed web based reservation app "Holiday Home" for employees
-          </p>
-          <ul class='item-personal-details'>
-            <li>Worked on technologies of HTML, JavaScript, JSP & Oracle</li>
-          </ul>
-        </div>
         </section>
         <section class='category education'>
         <div class='category-title'>EDUCATION</div>
